syntax = "proto3";

package pinax.ethereum.blobs.v1;

option go_package = "github.com/pinax-network/blobs-service/pb/pinax/ethereum/blobs/v1;pbbl";

import "google/protobuf/timestamp.proto";

message Blobs { repeated Blob blobs = 1; }

message Blob {
  uint32 index = 1;
  bytes blob = 2;
  bytes kzg_commitment = 3;
  bytes kzg_proof = 4;
  repeated bytes kzg_commitment_inclusion_proof = 6;

  uint64 slot = 10;
  uint64 proposer_index = 11;
  bytes parent_root = 12;
  bytes state_root = 13;
  bytes body_root = 14;
  bytes signature = 15;

  bytes root = 20;
  uint64 block_number = 21;
  google.protobuf.Timestamp timestamp = 22;
}
